<resources>
    <string name="app_name">SoccerBet</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_link">Need to Sign Up? Click Here</string>
    <string name="sign_up">Need to Sign Up? Click Here</string>
    <string name="sign_up_title">Join SoccerBet and have fun placing bets!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_text">Email</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="my_account_menu">My Account</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="settings_menu">Settings</string>
    <string name="refresh_menu">Refresh</string>
    <string name="homepage_prompt_msg">Select a League and Start Betting!</string>
    <string name="sign_out_text">Sign out</string>
    <string name="la_liga_text">LA LIGA</string>
    <string name="premier_league_text">PREMIER LEAGUE</string>
    <string name="bundesliga_text">BUNDESLIGA</string>
    <string name="serie_a_text">SERIE A</string>
    <string name="my_bets_menu">My Bets</string>
    <string name="forgot_password_text">
        <u>Forgot Password?</u>
    </string>
    <string name="provide_email_text">Provide Email</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="username_text">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testing_inline_valid">This password must contain capital letters, lower caps, numbers and special
        chars
    </string>
    <string name="position_header">Pos.</string>
    <string name="team_header">Team</string>
    <string name="points_header">Points</string>
    <string name="differential_header">Diff.</string>
    <string name="minus_sign">-</string>
    <string name="match_day">Match Day:</string>
    <string name="bet">Bet?</string>
    <string name="_0">0</string>
    <string name="submit_bet">Submit Bet</string>
    <string name="bet_instruction">Choose a score for each team and click on submit to register your bet.</string>
    <string name="update_bet_text">Update Bet</string>
    <string name="sign_in_header">Enter your credentials to sign in!</string>

    <string name="sign_in_blank_email">Please provide your email!</string>
    <string name="sign_in_invalid_email">The provided email is not valid!</string>
    <string name="sign_in_blank_password">Please enter your password!</string>

    <string name="sign_up_blank_username">Please provide a username.</string>
    <string name="sign_up_invalid_username">The username is invalid.
        The username has to be at least 4 characters long and contain a combination of uppercase, lowercase and/or digit.
    </string>
    <string name="sign_up_blank_email">Please provide an email.</string>
    <string name="sign_up_invalid_email">Please enter a valid email.</string>
    <string name="sign_up_blank_password">Please enter a password.</string>
    <string name="sign_up_invalid_password">Invalid password.
        The password must be at least 8 characters long and contain three of the following:
        an upper case, a lower case or a digit. Special characters are allowed.
    </string>
    <string name="sign_up_password_not_matching">Please enter the same password.</string>
    <string name="reset_password_header">Please enter your email below to reset your password</string>
    <string name="reset_password_email_blank_error">Please provide your email. This field is required.</string>
    <string name="reset_password_email_error">This email was not recognized.</string>
    <string name="reset_password_recovery_email_sent">A recovery link has been sent to your email.</string>
    <string name="reset_password_email_invalid">Please check the format of your email.</string>
    <string name="sign_up_success_msg">Sign up was successful!</string>

</resources>
