<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.fragments.LeagueFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLeagueTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="10dp"
            app:cardElevation="2dp"
            app:contentPadding="15dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/positionHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/position_header"
                    android:gravity="center"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="0.2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/teamHeader"/>
                <TextView
                    android:id="@+id/teamHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/team_header"
                    android:gravity="center"
                    app:layout_constraintHorizontal_weight="0.4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/positionHeader"
                    app:layout_constraintEnd_toStartOf="@id/pointsHeader"/>
                <TextView
                    android:id="@+id/pointsHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/points_header"
                    android:gravity="center"
                    app:layout_constraintHorizontal_weight="0.2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/teamHeader"
                    app:layout_constraintEnd_toStartOf="@id/differentialHeader"/>
                <TextView
                    android:id="@+id/differentialHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/differential_header"
                    android:gravity="start"
                    app:layout_constraintHorizontal_weight="0.2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pointsHeader"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </android.support.constraint.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leagueRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/cvLeagueTable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvLeagueTable"
            tools:listitem="@layout/item_layout">

        </androidx.recyclerview.widget.RecyclerView>
        <!-- android:layout_marginBottom="?attr/actionBarSize" -->

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>