<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.SignInActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:clipToPadding="false">

        <include
            layout="@layout/toolbar"
            android:id="@+id/signInToolbar"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/signInHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in_header"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/signInToolbar"
            app:layout_constraintStart_toEndOf="@id/signInGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/signInGuidelineRight"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_marginTop="50dp"
            android:hint="@string/email_hint"
            app:layout_constraintTop_toBottomOf="@id/signInHeader"
            app:layout_constraintStart_toEndOf="@id/signInGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/signInGuidelineRight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="45dp"
            android:hint="@string/password_hint"
            android:singleLine="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@drawable/password_toggle_state"
            app:layout_constraintStart_toEndOf="@id/signInGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/signInGuidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/etEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button_shape"
            android:text="@string/sign_in_text"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/signInGuidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/signInGuidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintBottom_toTopOf="@+id/tvSignUpText"/>

        <TextView
            android:id="@+id/tvSignUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_link"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
            app:layout_constraintBottom_toTopOf="@id/tvSignInError"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.389" />

        <TextView
            android:id="@+id/tvSignInError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignUpText"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginStart="-10dp"
            android:layout_marginEnd="-10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignInError"/>

        <android.support.constraint.Guideline
            android:id="@+id/signInGuidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/signInGuidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>