<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.PasswordResetActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/resetPasswordToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/resetPasswordHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/reset_password_header"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordToolbar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordResetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="5dp"
        android:hint="@string/provide_email_text"
        app:errorTextColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/passwordResetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_text"
        app:layout_constraintTop_toBottomOf="@id/passwordResetEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/passwordResetError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordResetButton"/>

</android.support.constraint.ConstraintLayout>