<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/statsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:contentPadding="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHomeTeam"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="0.25"
                app:layout_constraintEnd_toStartOf="@+id/tvHomeTeamScore"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="Inter"/>

            <TextView
                android:id="@+id/tvHomeTeamScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="0.125"
                app:layout_constraintStart_toEndOf="@id/tvHomeTeam"
                app:layout_constraintEnd_toStartOf="@id/minusSign"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text=""/>

            <TextView
                android:id="@+id/minusSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/minus_sign"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="0.05"
                app:layout_constraintStart_toEndOf="@id/tvHomeTeamScore"
                app:layout_constraintEnd_toStartOf="@id/tvAwayTeamScore"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvAwayTeamScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="0.125"
                app:layout_constraintStart_toEndOf="@id/minusSign"
                app:layout_constraintEnd_toStartOf="@id/tvAwayTeam"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text=""/>

            <TextView
                android:id="@+id/tvAwayTeam"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                app:layout_constraintHorizontal_weight="0.25"
                app:layout_constraintStart_toEndOf="@id/tvAwayTeamScore"
                app:layout_constraintEnd_toStartOf="@id/btnBet"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="Juventus"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bet"
                android:background="@color/colorPrimary"
                android:textAllCaps="false"
                app:layout_constraintHorizontal_weight="0.2"
                app:layout_constraintStart_toEndOf="@id/tvAwayTeam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvMatchDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/match_day"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/minusSign"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnBet"
                tools:text="Sun Oct 06 14:45:00 EDT 2019"
                tools:visibility="visible"/>

        </android.support.constraint.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</android.support.constraint.ConstraintLayout>